<resources>
    <string name="app_name">FishMate</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dasbor</string>
    <string name="image">Gambar</string>
    <string name="title">Judul</string>
    <string name="description">Keterangan</string>
    <string name="prompt_email">Masukkan email</string>
    <string name="prompt_password">Masukkan kata sandi</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="error_empty_email">Email tidak boleh kosong</string>
    <string name="error_empty_password">Kata sandi tidak boleh kosong</string>
    <string name="login_success">Login berhasil!</string>
    <string name="logo_fishmate">Logo FishMate</string>
    <string name="prompt_username">Masukkan nama pengguna</string>
    <string name="hello_blank_fragment">Hai fragmen kosong</string>
    <string name="image_profile">Foto Profil</string>
    <string name="username">Nama pengguna</string>
    <string name="email">email@example.com</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="log_out">Keluar</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="setting">Pengaturan</string>
    <string name="already_have_an_account_login">Sudah memiliki akun? Masuk</string>
    <string name="title_notifications">Pemberitahuan</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="product_title">Judul Produk</string>
    <string name="price">Harga</string>
    <string name="shop">Toko</string>

    <!-- Miscellaneous -->
    <string name="tv_email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>

    <string name="hint_token">Masukkan token</string>
    <string name="token_required">Token tidak boleh kosong</string>
    <string name="token_invalid">Token hanya boleh berisi huruf dan angka</string>
    <string name="token_length_error">Token harus terdiri dari 6 karakter</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="kirim_token">Kirim Token</string>

    <string name="prompt_old_password">Masukkan kata sandi saat ini</string>
    <string name="prompt_new_password">Masukkan kata sandi baru</string>
    <string name="lupa_password">Lupa Kata Sandi?</string>
    <string name="profile">Profil</string>
    <string name="result_image">Gambar Hasil</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="explanation">Penjelasan</string>
    <string name="loading_suggestion">Sedang memuatkan saran…</string>
    <string name="tanggal">Tanggal</string>
    <string name="history_diagnosis">History Diagnosis</string>
    <string name="clear_history">Clear History</string>
    <string name="back">Back</string>
    <string name="gejala">Gejala</string>
    <string name="isi_gejala">isi gejala</string>
    <string name="tindakan">Tindakan</string>
    <string name="isi_tindakan">isi tindakan</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="isi_pencegahan">isi pencegahan</string>
    <string name="hint_email">Masukkan email</string>
    <string name="hint_password">Masukkan kata sandi</string>
    <string name="hint_username">Masukkan nama pengguna</string>
    <string name="hint_old_password">Masukkan kata sandi saat ini</string>
    <string name="hint_new_password">Masukkan kata sandi baru</string>
    <string name="hint_confirm_password">Konfirmasi kata sandi</string>
    <string name="mail_required">Masukan Email</string>
    <string name="email_required">Email tidak boleh kosong</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_not_match">Kata sandi tidak cocok</string>
    <string name="password_required">Kata sandi tidak boleh kosong</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="username_required">Masukan Usernam</string>
    <string name="pastikan_foto_ikan_yang_digunakan_diambil_dari_sisi_samping">Pastikan foto ikan yang digunakan diambil dari sisi samping.</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="analisa_gambar">Analisa Gambar</string>
    <string name="kamera">Kamera</string>
    <string name="image_preview">Image Preview</string>
    <string name="capture_or_select_an_image">Capture or Select an Image</string>
    <string name="memuat_nama_ikan">Memuat Nama ikan...</string>
    <string name="fish_banner">Fish Banner</string>
    <string name="memuat_deskripsi_ikan">Memuat deskripsi ikan...</string>
</resources>