<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/fishmate_logo"
        android:contentDescription="@string/image_profile"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username -->
    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email -->
    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/username_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Settings Buttons -->
    <Button
        android:id="@+id/button_change_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/change_password"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:padding="12dp"/>

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dark_mode"
        android:textColor="@color/text_color"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/button_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:thumbTint="@color/thumbTint"
        android:trackTint="@color/trackTint"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_out"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/switchTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>